[package]
name = "tauri-plugin-power-manager"
version = "0.1.1"
authors = [ "cijiugechu <cijiugechu@gmail.com>" ]
description = "tauri plugin for shut down, reboot or log out operations."
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-power-manager"
keywords = ["tauri", "plugin", "power", "shutdown", "reboot"]
license = "MIT"
repository = "https://github.com/cijiugechu/tauri-plugin-power-manager"
documentation = "https://docs.rs/tauri-plugin-power-manager"

[dependencies]
tauri = { version = "2.0.6" }
serde = "1.0"
thiserror = "1.0"
system_shutdown = "4.0"

[build-dependencies]
tauri-plugin = { version = "2.0.1", features = ["build"] }
